--- a/stylesheet.css
+++ b/stylesheet.css
@@ -78,7 +78,7 @@ body {
 	background: #00b4ff;
 	color: #333;
 	font: 100% Lato, Arial, Sans Serif;
-	height: 100vh;
+	/*height: 100vh;*/
 	margin: 0;
 	padding: 0;
 	overflow-x: hidden;
@@ -92,6 +92,16 @@ body {
 	top: 0;
 	z-index: -1;
 }
+
+/* FOOTER- BOTTOM */
+#bottom{
+    position: fixed;
+    bottom: 0px;
+    width: 100%;
+    text-align: center; 
+    padding-bottom: 20px; 
+}
+
 /* BUBBLES */
 /* https://codepen.io/Mark_Bowley/pen/mEtqj */
 /* courtesy of Mark Bowley */
@@ -151,7 +161,7 @@ body {
     }
 }
 
-/* ANIMATIONS */
+/* BUBBLE ANIMATIONS */
 
 .x1 {
     -webkit-animation: animateBubble 25s linear infinite, sideWays 2s ease-in-out infinite alternate;
@@ -283,7 +293,7 @@ body {
 	transform: scale(0.3);
 }
 
-/* OBJECTS */
+/* BUBBLE OBJECTS */
 
 .bubble {
     -webkit-border-radius: 50%;
