--- a/stylesheet.css
+++ b/stylesheet.css
@@ -14,7 +14,34 @@ body{
 }
 
 /*header*/
+/* title slides in from top*/
+/*
+#title {
+  height:200px;
+  overflow:hidden;
+}
+#title h1 {
+  animation: 3s title;
+  margin-top:0%;
+}
+
+@keyframes title {
+  from {
+    margin-top: 100%;
+    height: 150%; 
+  }
+
+  to {
+    margin-top: 0%;
+    height: 100%;
+  }
+}
+*/
+
+
+
 h1 {
+
  font-size:5em;
  font-family: 'Lobster', cursive;
  user-select:none;
@@ -31,12 +58,16 @@ h1:hover{
  font-size:5em;
  font-family: 'Lobster', cursive;
  user-select:none;
- color: #668cff; 
+ /*color: #668cff; */
 
  text-shadow: 
     -1px -1px 0px #bfbfbf, 
     3px 3px 0px #bfbfbf,
     7px 7px 0px #666666;
+            -webkit-animation: swing 1s ease;
+        animation: swing 1s ease;
+        -webkit-animation-iteration-count: 1;
+        animation-iteration-count: 1;
 }
 
 
@@ -73,6 +104,7 @@ button{
 button:hover{
     background-color: #668cff; 
     color: white;
+     border-radius: 50%;
 }
 
 body {
