--- a/graphic1.css
+++ b/graphic1.css
@@ -5,6 +5,7 @@
 	width: 300px;
 	height: 200px;
 	padding-top: 100px;
+	padding-bottom: 100px;
 	margin: 0 auto;
     background: #666666;
     border-radius: 15px;
@@ -17,17 +18,16 @@
 	border-radius: 50px;
 }
 .drop-ball {
-	width: 10px;
-	height: 10px;
+	width: 20px;
+	height:20px;
 	margin: 10px auto;
+	margin-bottom: 50px;
 	border-radius: 50px;
 }
 
 .drop-ball {
 	background: red; 
-	-webkit-animation: right 2s infinite ease-in-out;
-	-moz-animation: right 2s infinite ease-in-out;
-	animation: right 2s infinite ease-in-out;
+
 }
 
 .ball:nth-child(1) {
