fonts and documentation page

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,26 @@
 /* INDEX PAGE */
 @import url(http://fonts.googleapis.com/css?family=Lobster);
+@import url(https://fonts.googleapis.com/css?family=Raleway);
 
+ul li{
+    font-family: 'Raleway', sans-serif;
+    font-size: 16px;
+}
+
+a{
+    color:#666666;
+    text-decoration: none;
+    -webkit-transition-duration: 0.5s; /* Safari */
+    transition-duration: 0.5s;
+    font-family: 'Lobster', cursive;
+    
+}
+a:hover{
+    color:#f2f2f2;
+    text-decoration: none;
+    -webkit-transition-duration: 0.5s; /* Safari */
+    transition-duration: 0.5s;
+}
 #title{
     text-align: center;
     padding-top: 20%;
@@ -9,6 +29,7 @@
     font-family: 'Lobster', cursive;
 }
 body{
+    
     background: #bfbfbf;
     color:  #666666
 }
@@ -43,7 +64,6 @@ body{
     text-align: center;
 }
 h1 {
-
  font-size:5em;
  font-family: 'Lobster', cursive;
  user-select:none;
@@ -66,10 +86,10 @@ h1:hover{
     -1px -1px 0px #bfbfbf, 
     3px 3px 0px #bfbfbf,
     7px 7px 0px #666666;
-            -webkit-animation: swing 1s ease;
-        animation: swing 1s ease;
-        -webkit-animation-iteration-count: 1;
-        animation-iteration-count: 1;
+    -webkit-animation: swing 1s ease;
+    animation: swing 1s ease;
+    -webkit-animation-iteration-count: 1;
+    animation-iteration-count: 1;
 }
 
 /* buttons css */
