--- a/stylesheet.css
+++ b/stylesheet.css
@@ -217,10 +217,28 @@ body {
 
 /* BUBBLE ANIMATIONS */
 
+.bubble {
+    -webkit-border-radius: 50%;
+	-moz-border-radius: 50%;
+	border-radius: 50%;
+	
+    -webkit-box-shadow: 0 20px 30px rgba(0, 0, 0, 0.2), inset 0px 10px 30px 5px rgba(255, 255, 255, 1);
+	-moz-box-shadow: 0 20px 30px rgba(0, 0, 0, 0.2), inset 0px 10px 30px 5px rgba(255, 255, 255, 1);
+	box-shadow: 0 20px 30px rgba(0, 0, 0, 0.2), inset 0px 10px 30px 5px rgba(255, 255, 255, 1);
+    /*box-shadow: 0 20px 30px rgba(0, 0, 0, 0.2), inset 0px 10px 30px 5px rgba(100, 0, 255,0.5);*/
+	
+    height: 200px;
+	position: absolute;
+	width: 200px;
+
+    -webkit-transition-duration: 0.6s; /* Safari */
+    transition-duration: 0.6s;
+}
 .x1 {
     -webkit-animation: animateBubble 25s linear infinite, sideWays 2s ease-in-out infinite alternate;
 	-moz-animation: animateBubble 25s linear infinite, sideWays 2s ease-in-out infinite alternate;
 	animation: animateBubble 25s linear infinite, sideWays 2s ease-in-out infinite alternate;
+    
 	
 	left: -5%;
 	top: 5%;
@@ -228,6 +246,7 @@ body {
 	-webkit-transform: scale(0.6);
 	-moz-transform: scale(0.6);
 	transform: scale(0.6);
+
 }
 
 .x2 {
@@ -241,6 +260,7 @@ body {
 	-webkit-transform: scale(0.4);
 	-moz-transform: scale(0.4);
 	transform: scale(0.4);
+
 }
 
 .x3 {
@@ -349,26 +369,21 @@ body {
 
 /* BUBBLE OBJECTS */
 
-.bubble {
-    -webkit-border-radius: 50%;
-	-moz-border-radius: 50%;
-	border-radius: 50%;
-	
-    -webkit-box-shadow: 0 20px 30px rgba(0, 0, 0, 0.2), inset 0px 10px 30px 5px rgba(255, 255, 255, 1);
-	-moz-box-shadow: 0 20px 30px rgba(0, 0, 0, 0.2), inset 0px 10px 30px 5px rgba(255, 255, 255, 1);
-	box-shadow: 0 20px 30px rgba(0, 0, 0, 0.2), inset 0px 10px 30px 5px rgba(255, 255, 255, 1);
-	
-    height: 200px;
-	position: absolute;
-	width: 200px;
-}
+
+/*
 .bubble:hover{
-    background: -moz-radial-gradient(center, ellipse cover,  rgba(100, 0, 255,0.5) 0%, rgba(100, 0, 255,0) 70%); /* FF3.6+ */
-    background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,rgba(100, 0, 255,0.5)), color-stop(70%,rgba(100, 0, 255, 0.4))); /* Chrome,Safari4+ */
-    background: -webkit-radial-gradient(center, ellipse cover,  rgba(100, 0, 255,0.5) 0%,rgba(100, 0, 255,0) 70%); /* Chrome10+,Safari5.1+ */
-    background: -ms-radial-gradient(center, ellipse cover,  rgba(100, 0, 255,0.5) 0%,rgba(100, 0, 255,0) 70%); /* IE10+ */
-    background: radial-gradient(ellipse at center,  rgba(100, 0, 255,0.5) 0%,rgba(100, 0, 255,0) 70%); /* W3C */
+    background: -moz-radial-gradient(center, ellipse cover,  rgba(100, 0, 255,0.5) 0%, rgba(100, 0, 255,0) 70%); /* FF3.6+ 
+    background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,rgba(100, 0, 255,0.5)), color-stop(70%,rgba(100, 0, 255, 0.4))); /* Chrome,Safari4+ 
+    background: -webkit-radial-gradient(center, ellipse cover,  rgba(100, 0, 255,0.5) 0%,rgba(100, 0, 255,0) 70%); /* Chrome10+,Safari5.1+ 
+    background: -ms-radial-gradient(center, ellipse cover,  rgba(100, 0, 255,0.5) 0%,rgba(100, 0, 255,0) 70%); /* IE10+ 
+    background: radial-gradient(ellipse at center,  rgba(100, 0, 255,0.5) 0%,rgba(100, 0, 255,0) 70%); /* W3C 
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#80ffffff', endColorstr='#00ffffff',GradientType=1 ); 
+}/*/
+.bubble:hover{
+    box-shadow: 0 20px 30px rgba(0, 0, 0, 0.2), inset 0px 10px 30px 5px rgba(100, 0, 255,0.5);
+    -webkit-transition-duration: 0.6s; /* Safari */
+    transition-duration: 0.6s;
+    cursor: pointer;
 }
 
 .bubble:after {
@@ -393,7 +408,6 @@ body {
 	position: absolute;
 	width: 180px;
 }
-
 body{
     background: #bfbfbf;
     color:  #666666
